[gd_scene load_steps=5 format=2]

[ext_resource path="res://pages/home/page_home.gd" type="Script" id=1]
[ext_resource path="res://res/ui/bts1/pressed.tres" type="StyleBox" id=2]
[ext_resource path="res://res/ui/bts1/normal.tres" type="StyleBox" id=3]
[ext_resource path="res://res/ui/bts1/hover.tres" type="StyleBox" id=4]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 520.0
margin_bottom = 35.0
alignment = 2

[node name="Bt_params" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 335.0
margin_right = 520.0
margin_bottom = 35.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/normal = ExtResource( 3 )
text = "KEY_SETTINGS"

[node name="Titre_Date" type="Label" parent="VBoxContainer"]
margin_top = 39.0
margin_right = 520.0
margin_bottom = 68.0
text = "KEY_DATE"

[node name="Date" type="Label" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 520.0
margin_bottom = 101.0
text = "Mercredi 27 octobre 2022"
align = 1

[node name="Titre_Heure" type="Label" parent="VBoxContainer"]
margin_top = 105.0
margin_right = 520.0
margin_bottom = 134.0
text = "KEY_HEURE"

[node name="Heure" type="Label" parent="VBoxContainer"]
margin_top = 138.0
margin_right = 520.0
margin_bottom = 167.0
text = "18h30"
align = 1

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
margin_top = 171.0
margin_right = 520.0
margin_bottom = 940.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 6

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Bt_params" to="." method="_on_Bt_params_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
